Custom--app/main/default/objects/Residence__c/Residence__c.object-meta.xml
<CustomObject>
    <description>This is the "parent" account of all Portfolio records and represents a property address.</description>
    <label>Residence</label>
    <nameField>
        <displayFormat>RES-{00000}</displayFormat>
        <label>Residence Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>