Custom--app/main/default/objects/Residence__c/fields/AC_or_Evap__c.field-meta.xml
<CustomField>
    <fullName>AC_or_Evap__c</fullName>
    <label>AC or Evap</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Evap</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>