Custom--app/main/default/objects/Residence__c/fields/AC_or_Evap_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>AC_or_Evap_Prior_Value__c</fullName>
    <label>AC or Evap Prior Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>