Custom--app/main/default/objects/Residence__c/fields/Address_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Address_Prior_Value__c</fullName>
    <label>Address Prior Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>