Custom--app/main/default/objects/Residence__c/fields/Address_State__c.field-meta.xml
<CustomField>
    <fullName>Address_State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>