Custom--app/main/default/objects/Residence__c/fields/Address_Unit__c.field-meta.xml
<CustomField>
    <fullName>Address_Unit__c</fullName>
    <description>If this residence is a condo or a member of a Multi-Unit-Complex, this field holds the Unit/Flat/Suite/etc.</description>
    <inlineHelpText>If this residence is a condo or a member of a Multi-Unit-Complex, this field holds the Unit/Flat/Suite/etc.  Note that when this Residence is a member of a Multi-Unit-Complex, we will append the unit to the end of the APN to create the APN_Unique value.</inlineHelpText>
    <label>Unit</label>
    <length>32</length>
    <type>Text</type>
</CustomField>