Custom--app/main/default/objects/Residence__c/fields/Address_Validated_County__c.field-meta.xml
<CustomField>
    <fullName>Address_Validated_County__c</fullName>
    <label>Address Validated County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>