Custom--app/main/default/objects/Residence__c/fields/Address_Validated_Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Address_Validated_Last_Attempt__c</fullName>
    <label>Address Validated Last Attempt</label>
    <type>DateTime</type>
</CustomField>