Custom--app/main/default/objects/Residence__c/fields/Address_Validated_Street__c.field-meta.xml
<CustomField>
    <fullName>Address_Validated_Street__c</fullName>
    <externalId>true</externalId>
    <label>Address Validated Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>