Custom--app/main/default/objects/Residence__c/fields/Address_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>Address_Validation_Message__c</fullName>
    <label>Address Validation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>