Custom--app/main/default/objects/Residence__c/fields/Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>