Custom--app/main/default/objects/Residence__c/fields/APN_Search__c.field-meta.xml
<CustomField>
    <fullName>APN_Search__c</fullName>
    <description>Searchable field that contains APN minus all non-alphanumerics</description>
    <label>APN Search</label>
    <length>64</length>
    <type>Text</type>
</CustomField>