Custom--app/main/default/objects/Residence__c/fields/APN_Unique__c.field-meta.xml
<CustomField>
    <fullName>APN_Unique__c</fullName>
    <label>APN Unique</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>