Custom--app/main/default/objects/Residence__c/fields/Atlanta_Auction__c.field-meta.xml
<CustomField>
    <fullName>Atlanta_Auction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atlanta Auction</label>
    <type>Checkbox</type>
</CustomField>