Custom--app/main/default/objects/Residence__c/fields/Baths_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Baths_Prior_Value__c</fullName>
    <label>Baths Prior Value</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>