Custom--app/main/default/objects/Residence__c/fields/Bedrooms_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms_Prior_Value__c</fullName>
    <label>Bedrooms Prior Value</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>