Custom--app/main/default/objects/Residence__c/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <label>Bid Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>