Custom--app/main/default/objects/Residence__c/fields/Capital_Markets_Email__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Email__c</fullName>
    <defaultValue>"capitalmarketsalerts@invitationhomes.com"</defaultValue>
    <inlineHelpText>This field is used in Residence and Portfolio Email Alerts pertaining to changes to fields as noted in Support Requests (Regional Controller Queues).</inlineHelpText>
    <label>Capital Markets Email</label>
    <type>Email</type>
</CustomField>