Custom--app/main/default/objects/Residence__c/fields/Child_Unit__c.field-meta.xml
<CustomField>
    <fullName>Child_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This residence is a "Child Unit" only if it belongs to a multi-unit complex such as a duplex, or a Three-Flat, or apartment building.</inlineHelpText>
    <label>Child-Unit</label>
    <type>Checkbox</type>
</CustomField>