Custom--app/main/default/objects/Residence__c/fields/City_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>City_Prior_Value__c</fullName>
    <label>City Prior Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>