Custom--app/main/default/objects/Residence__c/fields/County_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>County_Prior_Value__c</fullName>
    <label>County Prior Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>