Custom--app/main/default/objects/Residence__c/fields/Current_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Current_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This points to the Portfolio record that was most recently linked to this residence.</inlineHelpText>
    <label>Current Portfolio</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Residences Where Current</relationshipLabel>
    <relationshipName>ResidencesWhereCurrent</relationshipName>
    <type>Lookup</type>
</CustomField>