Custom--app/main/default/objects/Residence__c/fields/Date_Submitted_for_Insurance_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_for_Insurance_Inspection__c</fullName>
    <description>This field is editable for certain profiles only per Joe Florczak.</description>
    <label>Date Submitted for Insurance Inspection</label>
    <type>Date</type>
</CustomField>