Custom--app/main/default/objects/Residence__c/fields/Dupe_Address_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Dupe_Address_Identifier__c</fullName>
    <description>Field to identify dup addresses via Validated Street : Validated Zip</description>
    <label>Dupe Address Identifier</label>
    <length>120</length>
    <type>Text</type>
</CustomField>