Custom--app/main/default/objects/Residence__c/fields/Electric_Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Electric_Meter_Number__c</fullName>
    <label>Electric Meter #</label>
    <length>155</length>
    <type>Text</type>
</CustomField>