Custom--app/main/default/objects/Residence__c/fields/Electric_Notes__c.field-meta.xml
<CustomField>
    <fullName>Electric_Notes__c</fullName>
    <label>Electric Notes</label>
    <type>TextArea</type>
</CustomField>