Custom--app/main/default/objects/Residence__c/fields/Electric_Status__c.field-meta.xml
<CustomField>
    <fullName>Electric_Status__c</fullName>
    <label>Electric Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Confirmed On</fullName>
            </value>
            <value>
                <fullName>Pending Action Items</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>