Custom--app/main/default/objects/Residence__c/fields/Electricity_Provider__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Provider__c</fullName>
    <label>Electricity Provider</label>
    <length>150</length>
    <type>Text</type>
</CustomField>