Custom--app/main/default/objects/Residence__c/fields/File_Storage_Alias__c.field-meta.xml
<CustomField>
    <fullName>File_Storage_Alias__c</fullName>
    <formula>Address_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Storage Alias</label>
    <type>Text</type>
</CustomField>