Custom--app/main/default/objects/Residence__c/fields/Gas_Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Gas_Meter_Number__c</fullName>
    <label>Gas Meter #</label>
    <length>155</length>
    <type>Text</type>
</CustomField>