Custom--app/main/default/objects/Residence__c/fields/Gas_Notes__c.field-meta.xml
<CustomField>
    <fullName>Gas_Notes__c</fullName>
    <label>Gas Notes</label>
    <type>TextArea</type>
</CustomField>