Custom--app/main/default/objects/Residence__c/fields/Gas_Provider__c.field-meta.xml
<CustomField>
    <fullName>Gas_Provider__c</fullName>
    <label>Gas Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>