Custom--app/main/default/objects/Residence__c/fields/HOA__c.field-meta.xml
<CustomField>
    <fullName>HOA__c</fullName>
    <inlineHelpText>This reflects the text value that was entered by the broker during the underwriting process.  All active properties should be linked to an HOA record record to ensure we have complete visibility into any information about their leasing policies.</inlineHelpText>
    <label>HOA Name @ UW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>