Custom--app/main/default/objects/Residence__c/fields/HOA_Master_Prohibits_Leasing__c.field-meta.xml
<CustomField>
    <fullName>HOA_Master_Prohibits_Leasing__c</fullName>
    <formula>TEXT(HOA_Parent__r.Prohibits_Renters__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this property has a master community/ HOA that we have on file this will reflect if the HOA has strict bylaws that prohibit leasing. If you have this data point, click on the HOA company record and update the field accordingly.</inlineHelpText>
    <label>HOA Master Prohibits Leasing?</label>
    <type>Text</type>
</CustomField>