Custom--app/main/default/objects/Residence__c/fields/HOA_Options__c.field-meta.xml
<CustomField>
    <fullName>HOA_Options__c</fullName>
    <label>HOA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>