Custom--app/main/default/objects/Residence__c/fields/HOA_Parent__c.field-meta.xml
<CustomField>
    <fullName>HOA_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For properties that are associated with both a primary HOA and a master community, use this field to associate the property directly to the record for the HOA master.  If it is not already in the system you can click the "Companies" tab.</inlineHelpText>
    <label>HOA (Master Community)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Residences (HOA Master Community)</relationshipLabel>
    <relationshipName>Residences_HOA_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>