Custom--app/main/default/objects/Residence__c/fields/HOA_Primary__c.field-meta.xml
<CustomField>
    <fullName>HOA_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use the look-up to associate this residence with the related HOA record.  If the record does not exist, you can click on the Companies tab and select a new company with the record type of "Home Owners Assoc."</inlineHelpText>
    <label>HOA (Primary)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Residences (Primary HOA)</relationshipLabel>
    <relationshipName>Residences_HOA_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>