Custom--app/main/default/objects/Residence__c/fields/Insurance_Inspection_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Inspection_ID__c</fullName>
    <description>This field is editable for certain profiles only per Joe Florczak.</description>
    <label>Insurance Inspection ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>