Custom--app/main/default/objects/Residence__c/fields/Irrigation_System__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_System__c</fullName>
    <label>Irrigation System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>