Custom--app/main/default/objects/Residence__c/fields/Is_Street_Match__c.field-meta.xml
<CustomField>
    <fullName>Is_Street_Match__c</fullName>
    <formula>IF(UPPER(Address_Street__c)=UPPER(Address_Validated_Street__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Street Match</label>
    <type>Checkbox</type>
</CustomField>