Custom--app/main/default/objects/Residence__c/fields/Location_Score__c.field-meta.xml
<CustomField>
    <fullName>Location_Score__c</fullName>
    <label>Location Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>