Custom--app/main/default/objects/Residence__c/fields/Mailbox_No__c.field-meta.xml
<CustomField>
    <fullName>Mailbox_No__c</fullName>
    <label>Mailbox No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>