Custom--app/main/default/objects/Residence__c/fields/Most_Recent_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Disposition</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>Residences</relationshipLabel>
    <relationshipName>Residences</relationshipName>
    <type>Lookup</type>
</CustomField>