Custom--app/main/default/objects/Residence__c/fields/Most_Recent_Post_Acq_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Post_Acq_Rehab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will have most recent active post acquisition rehab record Id. Here active means Stage in not equals to "Closed - Cancelled". Only time it could have in active is when old active record stage changed to "Closed- Cancelled" and there is no active post acquisition rehab record available.</description>
    <label>Most Recent Post Acq. Rehab</label>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipLabel>Residences (Most Recent Active Post Acq. Rehab)</relationshipLabel>
    <relationshipName>Residences1</relationshipName>
    <type>Lookup</type>
</CustomField>