Custom--app/main/default/objects/Residence__c/fields/Most_Recent_Rehab_Stage__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Rehab_Stage__c</fullName>
    <formula>TEXT( Most_Recent_Rehab__r.Stage__c )</formula>
    <label>Most Recent Rehab Stage</label>
    <type>Text</type>
</CustomField>