Custom--app/main/default/objects/Residence__c/fields/Most_Recent_Yardi_Rent_Roll__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Yardi_Rent_Roll__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Yardi Rent Roll</label>
    <referenceTo>Yardi_Rent_Roll__c</referenceTo>
    <relationshipLabel>Residences</relationshipLabel>
    <relationshipName>Residences</relationshipName>
    <type>Lookup</type>
</CustomField>