Custom--app/main/default/objects/Residence__c/fields/My_Region__c.field-meta.xml
<CustomField>
    <fullName>My_Region__c</fullName>
    <formula>IF( $User.Formula_Region__c =  Region_Formula__c , 'Yes','No')</formula>
    <label>My Region</label>
    <type>Text</type>
</CustomField>