Custom--app/main/default/objects/Residence__c/fields/Overall_Asset_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Asset_Score__c</fullName>
    <description>Fields will be used across several different business units, providing increased analytics for use during asset &amp; investment management, rehab, leasing &amp; renewals, and marketing.</description>
    <label>Overall Asset Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>