Custom--app/main/default/objects/Residence__c/fields/Parent_Residence__c.field-meta.xml
<CustomField>
    <fullName>Parent_Residence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Parent Residence is the multi-unit property that contains several child units, including this one, such as a duplex or triplex</description>
    <inlineHelpText>The Parent Residence is the multi-unit property that contains several child units, including this one, such as a duplex or triplex</inlineHelpText>
    <label>Parent Residence</label>
    <referenceTo>Residence__c</referenceTo>
    <relationshipLabel>Child Residences</relationshipLabel>
    <relationshipName>Child_Residences</relationshipName>
    <type>Lookup</type>
</CustomField>