Custom--app/main/default/objects/Residence__c/fields/Parent_Structure__c.field-meta.xml
<CustomField>
    <fullName>Parent_Structure__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this Residence is comprised of other child Residences (like a Duplex, Triplex, 3-Flat, etc) then this box should be checked.</inlineHelpText>
    <label>Parent Structure</label>
    <type>Checkbox</type>
</CustomField>