Custom--app/main/default/objects/Residence__c/fields/Parking_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Parking_Prior_Value__c</fullName>
    <label>Parking Prior Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>