Custom--app/main/default/objects/Residence__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>AcqPipeline__c</referenceTo>
    <relationshipLabel>Residences</relationshipLabel>
    <relationshipName>Residences</relationshipName>
    <type>Lookup</type>
</CustomField>