Custom--app/main/default/objects/Residence__c/fields/PointCentral_Installation_Notes__c.field-meta.xml
<CustomField>
    <fullName>PointCentral_Installation_Notes__c</fullName>
    <label>PointCentral Installation Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>