Custom--app/main/default/objects/Residence__c/fields/PointCentral_Thermostat_Installed__c.field-meta.xml
<CustomField>
    <fullName>PointCentral_Thermostat_Installed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PointCentral Thermostats Installed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>