Custom--app/main/default/objects/Residence__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <label>Pool</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>