Custom--app/main/default/objects/Residence__c/fields/Pool_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Pool_Prior_Value__c</fullName>
    <label>Pool Prior Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>