Custom--app/main/default/objects/Residence__c/fields/Property_Notes_Specific_to_Property__c.field-meta.xml
<CustomField>
    <fullName>Property_Notes_Specific_to_Property__c</fullName>
    <inlineHelpText>This should be used to note specific details that are needed for the life of the property (ie - no granite can be used on 2nd floor units)</inlineHelpText>
    <label>Property Notes (Specific to Property)</label>
    <type>TextArea</type>
</CustomField>