Custom--app/main/default/objects/Residence__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <inlineHelpText>Detached: 1 unit and 1 APN.  Attached–Condo:  1 unit and 1 APN (no multiple units per parcel can exist).  Attached–Duplex: 2 units and 1 or 2 APNs.  If 1 APN, then split into parent/child.  If 2 APNs, then 2 RES and 2 PORT.  Other: multiple units/APNs.</inlineHelpText>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Family Home</fullName>
                <default>true</default>
                <label>Single Family Home</label>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Townhome</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Triplex</fullName>
            </value>
            <value>
                <fullName>Quad</fullName>
            </value>
            <value>
                <fullName>Vacant Lot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>