Custom--app/main/default/objects/Residence__c/fields/Property_Type_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Type_Prior_Value__c</fullName>
    <label>Property Type Prior Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>