Custom--app/main/default/objects/Residence__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>Acq_Prospect__c</referenceTo>
    <relationshipLabel>Residences</relationshipLabel>
    <relationshipName>Residences</relationshipName>
    <type>Lookup</type>
</CustomField>