Custom--app/main/default/objects/Residence__c/fields/Region_Formula__c.field-meta.xml
<CustomField>
    <fullName>Region_Formula__c</fullName>
    <formula>TEXT( Region__c )</formula>
    <label>Region Formula</label>
    <type>Text</type>
</CustomField>